--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title><ShadyOxbridge></title>
+<title>japanese</title>
  <meta charset="utf-8">
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -90,9 +90,15 @@
      <div class="sign">
      <a hrf="#"><img class="sign-in-img" src="images/avatar.svg" alt="sign-in">
     Sign-in</a>
-
+    
      </div>
-
+     <div class="text-center">
+      <form name="signup" action="/auth/signUp" method="post">
+        username: <input name="username" id="username" style="color: black;"/><br/>
+        password: <input type="password" name="password" id="password" style="color: black;"/><br/>
+      <input type="submit" value="SIGN UP TODAY" class="btn btn-primary btn-lg"></input>
+      </form>
+    </div>
      </div>
 
   		</div>
