--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,21 +2,21 @@
 <html>
 <head>
 	<title>Japanese Learning</title>
-	<link rel="stylesheet" href="css/base.css"/>
-	<link rel="stylesheet" href="css/index.css"/>
-	<meta charset="UTF-8"/>
+	<link rel="stylesheet" href="css/base.css">
+	<link rel="stylesheet" href="css/index.css">
+	<meta charset="UTF-8">
 </head>
 	<body>
 		<header>
 			<nav>
 				<a id="HomeButton" href="/">Japanese Learning</a>
 				<a href="practice">Practice</a>
-				<a href="calender">Calender</a>
+				<a href="calendar">Calendar</a>
 				<a href="account">Account</a>
 			</nav>
 		</header>
 		<main>
-			<img id="fuji" src="images/fuji.png"/>
+			<img id="fuji" src="images/fuji.png">
 			<h1 class="containerBox">Simple practice exercises for students of the Japanese language!</h1>
 		</main>
 	</body>
