--- a/public/css/base.css
+++ b/public/css/base.css
@@ -58,3 +58,21 @@ nav a {
     border: 4px solid #201E1E;
     margin: 30px auto;
 }
+
+.button {
+    color: #FFFFFF;
+    background: #BC002D;
+    padding: 10px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.inputBar {
+    margin: 10px 0;
+}
+
+.inputBar:focus {
+    outline: none;
+    border: 1px solid #BC002D;
+    box-shadow: 0 0 5px #BC002D;
+}
