--- a/public/css/practice.css
+++ b/public/css/practice.css
@@ -4,39 +4,27 @@
 
 #selectionContainer {
     display: flex;
+    flex-wrap: wrap;
 }
 
 .optionBox {
     flex: 0 1 auto;
 }
 
-.practiceButton {
-    color: #FFFFFF;
-    background: #BC002D;
-    padding: 10px;
-    border-radius: 5px;
-    cursor: pointer;
+#practiceContainer {
+    display: flex;
 }
 
 #practiceBox {
-    width: 200px;
+    display: inline-block;
 }
 
 #problemDisplay {
     font-size: 50px;
+    white-space: nowrap;
     margin: 10px;
 }
 
 #answerDisplay {
     font-size: 30px;
-}
-
-#inputBar {
-    margin: 10px 0;
-}
-
-#inputBar:focus {
-    outline: none;
-    border: 1px solid #BC002D;
-    box-shadow: 0 0 5px #BC002D;
 }
