Practice finish functionality
+some more data

--- a/views/account.ejs
+++ b/views/account.ejs
@@ -21,14 +21,14 @@
 			<input name="username" id="username" class="inputBar"><br>
 			<label for="password">Password:</label>
 			<input type="password" name="password" id="password" class="inputBar"><br><br>
-			<input type="submit" value="Sign in" class="button">
+			<input type="submit" value="Sign in" class="redButton">
 		</form>
 		<form class="containerBox" name="signup" action="/auth/signUp" method="post" autocomplete="off">
 			<label for="username">Username:</label> 
 			<input name="username" id="username" class="inputBar"><br>
 			<label for="password">Password:</label>
 			<input type="password" name="password" id="password" class="inputBar"><br><br>
-			<input type="submit" value="Sign up" class="button">
+			<input type="submit" value="Sign up" class="redButton">
 		</form>
 	</main>
 </body>
