added 'fetch' from website
can finally connect between front-end and back-end with get/ post requests.

--- a/views/account.ejs
+++ b/views/account.ejs
@@ -16,7 +16,7 @@
 		</nav>
 	</header>
 	<main>
-		<form class="containerBox" name="signup" action="/auth/signIn" method="post" autocomplete="off">
+		<form class="containerBox" name="signin" action="/auth/signIn" method="post" autocomplete="off">
 			<label for="username">Username:</label> 
 			<input name="username" id="username" class="inputBar"><br>
 			<label for="password">Password:</label>
