--- a/views/account.ejs
+++ b/views/account.ejs
@@ -16,14 +16,14 @@
 		</nav>
 	</header>
 	<main>
-		<form class="containerBox" name="signin" action="/auth/signIn" method="post" autocomplete="off">
+		<form class="containerBox" name="signin" action="/account/signIn" method="post" autocomplete="off">
 			<label for="username">Username:</label> 
 			<input name="username" id="username" class="inputBar"><br>
 			<label for="password">Password:</label>
 			<input type="password" name="password" id="password" class="inputBar"><br><br>
 			<input type="submit" value="Sign in" class="redButton">
 		</form>
-		<form class="containerBox" name="signup" action="/auth/signUp" method="post" autocomplete="off">
+		<form class="containerBox" name="signup" action="/account/signUp" method="post" autocomplete="off">
 			<label for="username">Username:</label> 
 			<input name="username" id="username" class="inputBar"><br>
 			<label for="password">Password:</label>
