--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -15,9 +15,7 @@
 		</nav>
 	</header>
 	<main>
-		<div id="calendarContainer">
-			<h1 class="containerBox">Log in to view your personal calendar.</h1>
-		</div>
+        <h1 class="containerBox">You are now logged in!</h1>
 	</main>
 </body>
 </html>
