--- a/views/calendar.ejs
+++ b/views/calendar.ejs
@@ -15,7 +15,7 @@
 		</nav>
 	</header>
 	<main>
-		<div id="calendarContainer">
+		<div class="mainContainer">
 			<h1 class="containerBox">Log in to view your personal calendar.</h1>
 		</div>
 	</main>
