--- a/views/practice.ejs
+++ b/views/practice.ejs
@@ -16,7 +16,7 @@
 			</nav>
 		</header>
 		<main>
-			<div id="practiceContainer"></div>
+			<div id="practiceContainer" class="mainContainer"></div>
 		</main>
 		<script src="javaScript/practice.js"></script>
 	</body>
