--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -15,7 +15,9 @@
 		</nav>
 	</header>
 	<main>
-        <h1 class="containerBox">You are now logged in!</h1>
+        <div id="profileContainer" class="mainContainer">
+			<h1 class="containerBox">You are now logged in!</h1>
+		</div>
 	</main>
 </body>
 </html>
