--- a/views/userCalendar.ejs
+++ b/views/userCalendar.ejs
@@ -16,15 +16,8 @@
 		</nav>
 	</header>
 	<main>
-		<div id="calendarContainer">
-			<div class="dayBox containerBox">Day 1</div>
-            <div class="dayBox containerBox">Day 2</div>
-            <div class="dayBox containerBox">Day 3</div>
-            <div class="dayBox containerBox">Day 4</div>
-            <div class="dayBox containerBox">Day 5</div>
-            <div class="dayBox containerBox">Day 6</div>
-            <div class="dayBox containerBox">Day 7</div>
-		</div>
+		<div id="calendarContainer" class="mainContainer"></div>
 	</main>
+	<script src="javaScript/userCalendar.js"></script>
 </body>
 </html>
