--- a/public/css/base.css
+++ b/public/css/base.css
@@ -49,6 +49,10 @@ nav a {
     border-left: none;
 }
 
+.mainContainer {
+    display: flex;
+}
+
 .containerBox {
     color: #201E1E;
     background: #FFFFFF;
