--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -17,7 +17,10 @@
 	<main>
         <div id="profileContainer" class="mainContainer">
 			<h1 class="containerBox">You are now logged in!</h1>
+			<br><br>
+			<a href='http://localhost:4000/account/signOut' class="containerBox" >Sign Out</a>
 		</div>
+		
 	</main>
 </body>
 </html>
