--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -16,9 +16,10 @@
 	</header>
 	<main>
         <div id="profileContainer" class="mainContainer">
-			<h1 class="containerBox">You are now logged in!</h1>
-			<br><br>
-			<a href='http://localhost:4000/account/signOut' class="containerBox" >Sign Out</a>
+			<div class="containerBox">
+				<h1>You are now logged in!</h1>
+				<button class="redButton" onClick="location.href='http://localhost:4000/account/signOut'">Sign out</button>
+			</div>
 		</div>
 		
 	</main>
