--- a/public/css/write.css
+++ b/public/css/write.css
@@ -8,9 +8,9 @@ h1 {
 	text-align: center;
 }
 #paint {
-	border:3px solid red;
-    height: 200px;
-    width: 200px;
+	border:3px solid #BC002D;
+    height: 206px;
+    width: 206px;
 	margin: auto;
 }
 #predicted {
@@ -26,6 +26,10 @@ h1 {
 	vertical-align: middle;
     height: 200px;
     width: 200px;
+}
+#myCanvas {
+
+	background: white;
 }
 .button {
 	margin: auto;
