--- a/views/write.ejs
+++ b/views/write.ejs
@@ -2,21 +2,31 @@
 <html lang="en">
 
 <head>
+	<title>Japanese Learning</title>
+		<link rel="stylesheet" href="css/base.css">
+		<link rel="stylesheet" href="css/write.css" />
+		<meta charset="UTF-8">
 	<script src=
 	"https://code.jquery.com/jquery-2.2.4.min.js">
 	</script>
 	<script src=
 	"https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.5.2/dist/tf.min.js">
 	</script>
-	
-	<link rel="stylesheet" href="css/write.css" />
 </head>
 
 <body>
+	<header>
+		<nav>
+			<a id="HomeButton" href="/">Japanese Learning</a>
+			<a href="practice">Practice</a>
+			<a href="calendar">Calendar</a>
+			<a href="account">Account</a>
+		</nav>
+	</header>
 	<h1>Hiragana Recognition</h1>
 
 	<div id="paint">
-		<canvas id="myCanvas" width="200" height="200"></canvas>
+		<canvas id="myCanvas" width="200px" height="200px"></canvas>
 	</div>
 
 	<div class="center">
@@ -25,8 +35,8 @@
 
 	<div id="predicted">
 		Recognized hiragana:
-		<div id="predicted"></div>
-		<button id="clear" class="button">Clear</button>
+		<div id="result"></div>
+		<button id="clear" class="button" onclick="clearCanvas()">Clear</button>
 	</div>
 	<script src="javaScript/write.js"></script>
 </body>
