--- a/views/practice.ejs
+++ b/views/practice.ejs
@@ -2,8 +2,8 @@
 <html>
 	<head>
 		<title>Japanese Learning</title>
-		<link rel="stylesheet" href="css/base.css">
-		<link rel="stylesheet" href="css/practice.css">
+		<link rel="stylesheet" href="/css/base.css">
+		<link rel="stylesheet" href="/css/practice.css">
 		<meta charset="UTF-8">
 		<script src=
 		"https://code.jquery.com/jquery-2.2.4.min.js">
@@ -16,9 +16,9 @@
 		<header>
 			<nav>
 				<a id="HomeButton" href="/">Japanese Learning</a>
-				<a href="practice">Practice</a>
-				<a href="calendar">Calendar</a>
-				<a href="account">Account</a>
+				<a href="/practice">Practice</a>
+				<a href="/calendar">Calendar</a>
+				<a href="/account">Account</a>
 			</nav>
 		</header>
 		<main>
