--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,17 +2,17 @@
 <html>
 <head>
 	<title>Japanese Learning</title>
-	<link rel="stylesheet" href="css/base.css">
-	<link rel="stylesheet" href="css/index.css">
+	<link rel="stylesheet" href="/css/base.css">
+	<link rel="stylesheet" href="/css/index.css">
 	<meta charset="UTF-8">
 </head>
 	<body>
 		<header>
 			<nav>
 				<a id="HomeButton" href="/">Japanese Learning</a>
-				<a href="practice">Practice</a>
-				<a href="calendar">Calendar</a>
-				<a href="account">Account</a>
+				<a href="/practice">Practice</a>
+				<a href="/calendar">Calendar</a>
+				<a href="/account">Account</a>
 			</nav>
 		</header>
 		<main>
