--- a/views/account.ejs
+++ b/views/account.ejs
@@ -25,17 +25,19 @@
 	</div>
 	<main>
 		<form class="containerBox" name="signin" action="/account/signIn" method="post" autocomplete="off">
-			<label for="username">Username:</label> 
-			<input name="username" id="username" class="inputBar"><br>
-			<label for="password">Password:</label>
-			<input type="password" name="password" id="password" class="inputBar"><br><br>
+			<label for="signin_username">Username:</label> 
+			<input name="username" id="signin_username" class="inputBar"><br>
+			<label for="signin_password">Password:</label>
+			<input type="password" name="password" id="signin_password" class="inputBar"><br><br>
 			<input type="submit" value="Sign in" class="redButton">
 		</form>
 		<form class="containerBox" name="signup" action="/account/signUp" method="post" autocomplete="off">
-			<label for="username">Username:</label> 
-			<input name="username" id="username" class="inputBar"><br>
-			<label for="password">Password:</label>
-			<input type="password" name="password" id="password" class="inputBar"><br><br>
+			<label for="email">Email:</label> 
+			<input name="email" id="email" class="inputBar" type="email"><br>
+			<label for="signup_username">Username:</label> 
+			<input name="username" id="signup_username" class="inputBar"><br>
+			<label for="signup_password">Password:</label>
+			<input type="password" name="password" id="signup_password" class="inputBar"><br><br>
 			<input type="submit" value="Sign up" class="redButton">
 		</form>
 	</main>
