--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -17,7 +17,7 @@
 	<main>
         <div id="profileContainer" class="mainContainer">
 			<div class="containerBox">
-				<h1>You are now logged in!</h1>
+				<h1>Hello <%= username %></h1>
 				<button class="redButton" onClick="location.href='http://localhost:4000/account/signOut'">Sign out</button>
 			</div>
 		</div>
