fixed href issues
in calendar and profile

--- a/views/userCalendar.ejs
+++ b/views/userCalendar.ejs
@@ -18,6 +18,6 @@
 	<main>
 		<div id="calendarContainer" class="mainContainer"></div>
 	</main>
-	<script src="javaScript/userCalendar.js"></script>
+	<script src="/javaScript/userCalendar.js"></script>
 </body>
 </html>
