--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -18,7 +18,7 @@
         <div id="profileContainer" class="mainContainer">
 			<div class="containerBox">
 				<h1>Hello <%= username %></h1>
-				<button class="redButton" onClick="location.href='http://localhost:4000/account/signOut'">Sign out</button>
+				<button class="redButton" onClick="location.href='/account/signOut'">Sign out</button>
 			</div>
 		</div>
 		
