added html/ encryption/ image loading
changed some html/ css
added password encryption
optimised profile image loading

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -20,14 +20,14 @@
 				<div class="containerBox">
 					<h1>Hello <%= username %>
 					</h1>
-					<button class="redButton" onClick="location.href='/account/signOut'">Sign out</button>
+					<button class="redButton" id="signOutBtn">Sign out</button>
 				</div>
 			</div>
 			<div class="mainContainer">
 				<div class="containerBox">
 					<img id="profileImg"> <label id="upprogress"></label> <br> <br>
 					<button id="selbtn" class="redButton">Upload profile picture</button>
-					<button id="upbtn" class="redButton">Confirm</button>
+					<button id="upbtn" class="redButton center">Confirm</button>
 				</div>
 				<div class="containerBox">
 					<button id="friendButton" class="redButton">Friends</button>
