fixed log in password checking
added a basic msg box, installed socket.io

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -35,6 +35,14 @@
 				</div>
 			</div>
 		</main>
+		<body>
+			<div class="containerBox">
+				<ul id="messages"></ul>
+				<form id="form" action="">
+			  		<input id="input" autocomplete="off" /><button>Send</button>
+				</form>
+			</div>
+		  </body>
 		<script type="module" src="javaScript/profile.js"></script>
 	</body>
 </html>
