--- a/views/calendar.ejs
+++ b/views/calendar.ejs
@@ -3,6 +3,7 @@
 <head>
 	<title>Japanese Learning</title>
 	<link rel="stylesheet" href="/css/base.css">
+	<link rel="stylesheet" href="/css/calendar.css">
 	<meta charset="UTF-8">
 </head>
 <body>
@@ -18,6 +19,7 @@
 		<div class="mainContainer">
 			<h1 class="containerBox">Log in to view your personal calendar.</h1>
 		</div>
+		  
 	</main>
 </body>
 </html>
