--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -47,10 +47,8 @@
 			</form>
 		</div>
 		<div class="search-container">
-			<form action="/">
-				<input type="text" placeholder="Search.." name="search" autocomplete="off">
-				<button type="submit"><i class="fa fa-search"></i></button>
-			</form>
+				<input type="text" placeholder="Search.." name="search" autocomplete="off" id="username">
+				<button type="submit" id="searchName"><i class="fa fa-search"></i></button>
 		</div>
 
 	</main>
