chat/ fixed bug
added chat button for private chat, completed check/create chatroom function. fixed a log in bug

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -50,7 +50,11 @@
 				<input type="text" placeholder="Search.." name="search" autocomplete="off" id="username">
 				<button type="submit" id="searchName"><i class="fa fa-search"></i></button>
 		</div>
+		<div class="container">
+			<ul id="searchResult">
 
+			</ul>
+		</div>
 	</main>
 	<script type="module" src="javaScript/profile.js"></script>
 </body>
