added friend list functions

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -38,6 +38,12 @@
 				<button id="friendButton" class="redButton">Friends</button>
 				<button id="chatButton" class="redButton">Chat</button>
 			</div>
+			<div class="container">
+				<br>
+				<ul id="friendList">
+	
+				</ul>
+			</div>
 		</div>
 		<div class="containerBox">
 			<div id="message-container"></div>
